--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "@fontsource/roboto-mono": "^4.5.8"
   }
 }
